raffia/tests/recoverable/declaration/top-level-ident-template.scss.error.snap
---
source: raffia/tests/recoverable.rs
---
error: declaration at top level is disallowed
  ┌─ top-level-ident-template.scss:1:1
  │
1 │ height: 1p#{''}x
  │ ^^^^^^^^^^^^^^^^
